@@ -1,6 +1,9 @@
 
 Drupal 7.23, xxxx-xx-xx (development version)
 -----------------------
+- Changed the password reset form to pre-fill the username when requested via a
+  URL query parameter, and used this in the error message that appears after a
+  failed login attempt (minor data structure and behavior change).
 - Fixed broken support for foreign keys in the field API.
 - Fixed "No active batch" error when a user cancels their own account.
 - Added a description to the "access content overview" permission on the
